# geneticalgos

./: README.md  final_project_tsp_alex_kappen_phys3g03.ipynb  pyproject.toml
nbs/: final_project_tsp_alex_kappen_phys3g03.ipynb
tests/: test_algorithms.py  test_utils.py
tspdux/: __main__.py  algorithms.py  basics.py  cities.py  libtypes.py  utils.py
