[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tspdux"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "ImAKappa", email = "imaninconsp1cuouskappa@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "networkx>=3.2"
]

[project.urls]
Documentation = "https://github.com/unknown/tspdux#readme"
Issues = "https://github.com/unknown/tspdux/issues"
Source = "https://github.com/unknown/tspdux"

[tool.hatch.version]
path = "tspdux/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
python = "3.12"

[tool.hatch.envs.default.scripts]
start = "python -m tspdux"
test = "python -m pytest tests/ {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:tspdux tests}"

[tool.coverage.run]
source_pkgs = ["tspdux", "tests"]
branch = true
parallel = true
omit = [
  "tspdux/__about__.py",
]

[tool.coverage.paths]
tspdux = ["tspdux", "*/tspdux/tspdux"]
tests = ["tests", "*/tspdux/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
